// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DragDrop /> Accessibility story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop"
    data-rbd-droppable-context-id="3"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="3"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-0"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-0"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          Each drag item has role="button"
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          (Open this canvas in its own tab for best results)
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          Use Tab key to select an item
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          Press Spacebar to pick up the selected item
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-4"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          Arrow keys move the item within a container (up/down) or to another container (left/right)
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-5"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-5"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          Press Spacebar again to drop the item
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-6"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-6"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          All actions (using mouse/touch or keyboard controls) are announced to screen readers
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="3"
      data-rbd-droppable-id="container-2"
    />
  </section>
</div>
`;

exports[`<DragDrop /> Default story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop"
    data-rbd-droppable-context-id="0"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="0"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #1
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #2
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #3
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="item-4"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="item-4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #4
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="item-5"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="item-5"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #5
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="0"
      data-rbd-droppable-id="container-2"
    />
  </section>
</div>
`;

exports[`<DragDrop /> MultipleContainers story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop drag-drop--multiple"
    data-rbd-droppable-context-id="1"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-9"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #1
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-9"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #2
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-9"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #3
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="container-2"
    >
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-9"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="item-4"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="item-4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #4
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="container-3"
    >
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-9"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="item-5"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="item-5"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #5
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<DragDrop /> OtherComponents story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop drag-drop--multiple drag-drop--unstyled"
    data-rbd-droppable-context-id="4"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="4"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="media-block"
        >
          <div
            class="media-block__body"
          >
            <h3
              class="u-margin-bottom-md heading heading--size-h3"
            >
              Drag any component
            </h3>
            <div
              class="text-passage"
            >
              <div
                class="layout-linelength-container text-passage__inner"
              >
                <p>
                  The Drag and Drop component can hold any component, or combination of components, without adding any additional styling. This story demonstrates dragging a Media Block, a Card, a Table, and a Text Passage.
                </p>
              </div>
            </div>
          </div>
          <div
            class="media-block__media"
          >
            <img
              alt="placeholder image"
              class="media-block__image"
              src="https://placekitten.com/500/500"
            />
          </div>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="card"
        >
          <header
            class="card__header"
          >
            <div
              class="fpo"
            >
              Card Header
            </div>
          </header>
          <div
            class="card__body"
          >
            <div
              class="fpo"
            >
              Card Body
            </div>
          </div>
          <footer
            class="card__footer"
          >
            <div
              class="fpo"
            >
              Card Footer
            </div>
          </footer>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <table
          class="table"
        >
          <caption
            class="table__caption u-is-vishidden"
          />
          <thead
            class="eds-c-table__header"
          >
            <tr
              class="table__row"
            >
              <th
                class="table__cell"
              >
                Name
              </th>
              <th
                class="table__cell"
              >
                Status
              </th>
              <th
                class="table__cell"
              >
                Chart
              </th>
              <th
                class="table__cell"
              >
                Window
              </th>
              <th
                class="table__cell"
              >
                Last Update
              </th>
            </tr>
          </thead>
          <tbody
            class="table__body"
          >
            <tr
              class="table__row"
            >
              <td
                class="table__cell"
              >
                Table Row 1, Table Cell 1
              </td>
              <td
                class="table__cell"
              >
                Table Row 1, Table Cell 2
              </td>
              <td
                class="table__cell"
              >
                Table Row 1, Table Cell 3
              </td>
              <td
                class="table__cell"
              >
                Table Row 1, Table Cell 4
              </td>
              <td
                class="table__cell"
              >
                Table Row 1, Table Cell 5
              </td>
            </tr>
            <tr
              class="table__row"
            >
              <td
                class="table__cell"
              >
                Table Row 2, Table Cell 1
              </td>
              <td
                class="table__cell"
              >
                Table Row 2, Table Cell 2
              </td>
              <td
                class="table__cell"
              >
                Table Row 2, Table Cell 3
              </td>
              <td
                class="table__cell"
              >
                Table Row 2, Table Cell 4
              </td>
              <td
                class="table__cell"
              >
                Table Row 2, Table Cell 5
              </td>
            </tr>
            <tr
              class="table__row"
            >
              <td
                class="table__cell"
              >
                Table Row 3, Table Cell 1
              </td>
              <td
                class="table__cell"
              >
                Table Row 3, Table Cell 2
              </td>
              <td
                class="table__cell"
              >
                Table Row 3, Table Cell 3
              </td>
              <td
                class="table__cell"
              >
                Table Row 3, Table Cell 4
              </td>
              <td
                class="table__cell"
              >
                Table Row 3, Table Cell 5
              </td>
            </tr>
            <tr
              class="table__row"
            >
              <td
                class="table__cell"
              >
                Table Row 4, Table Cell 1
              </td>
              <td
                class="table__cell"
              >
                Table Row 4, Table Cell 2
              </td>
              <td
                class="table__cell"
              >
                Table Row 4, Table Cell 3
              </td>
              <td
                class="table__cell"
              >
                Table Row 4, Table Cell 4
              </td>
              <td
                class="table__cell"
              >
                Table Row 4, Table Cell 5
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-4"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="text-passage"
        >
          <div
            class="layout-linelength-container text-passage__inner"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="4"
      data-rbd-droppable-id="container-2"
    />
  </section>
</div>
`;

exports[`<DragDrop /> UnstyledItems story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop drag-drop--multiple drag-drop--unstyled"
    data-rbd-droppable-context-id="4"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="4"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="media-block"
        >
          <div
            class="media-block__body"
          >
            <h3
              class="u-margin-bottom-md heading heading--size-h3"
            >
              Drag any component
            </h3>
            <div
              class="text-passage"
            >
              <div
                class="layout-linelength-container text-passage__inner"
              >
                <p>
                  The Drag and Drop component can hold any component, or combination of components, without adding any additional styling. This story demonstrates dragging a Media Block, a Card, a Table, and a Text Passage.
                </p>
              </div>
            </div>
          </div>
          <div
            class="media-block__media"
          >
            <img
              alt="placeholder image"
              class="media-block__image"
              src="https://placekitten.com/500/500"
            />
          </div>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="card"
        >
          <header
            class="card__header"
          >
            <div
              class="fpo"
            >
              Card Header
            </div>
          </header>
          <div
            class="card__body"
          >
            <div
              class="fpo"
            >
              Card Body
            </div>
          </div>
          <footer
            class="card__footer"
          >
            <div
              class="fpo"
            >
              Card Footer
            </div>
          </footer>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <table
          class="table"
        >
          <caption
            class="table__caption u-is-vishidden"
          />
          <thead
            class="eds-c-table__header"
          >
            <tr
              class="table__row"
            >
              <th
                class="table__cell"
              >
                Name
              </th>
              <th
                class="table__cell"
              >
                Status
              </th>
              <th
                class="table__cell"
              >
                Chart
              </th>
              <th
                class="table__cell"
              >
                Window
              </th>
              <th
                class="table__cell"
              >
                Last Update
              </th>
            </tr>
          </thead>
          <tbody
            class="table__body"
          >
            <tr
              class="table__row"
            >
              <td
                class="table__cell"
              >
                Table Row 1, Table Cell 1
              </td>
              <td
                class="table__cell"
              >
                Table Row 1, Table Cell 2
              </td>
              <td
                class="table__cell"
              >
                Table Row 1, Table Cell 3
              </td>
              <td
                class="table__cell"
              >
                Table Row 1, Table Cell 4
              </td>
              <td
                class="table__cell"
              >
                Table Row 1, Table Cell 5
              </td>
            </tr>
            <tr
              class="table__row"
            >
              <td
                class="table__cell"
              >
                Table Row 2, Table Cell 1
              </td>
              <td
                class="table__cell"
              >
                Table Row 2, Table Cell 2
              </td>
              <td
                class="table__cell"
              >
                Table Row 2, Table Cell 3
              </td>
              <td
                class="table__cell"
              >
                Table Row 2, Table Cell 4
              </td>
              <td
                class="table__cell"
              >
                Table Row 2, Table Cell 5
              </td>
            </tr>
            <tr
              class="table__row"
            >
              <td
                class="table__cell"
              >
                Table Row 3, Table Cell 1
              </td>
              <td
                class="table__cell"
              >
                Table Row 3, Table Cell 2
              </td>
              <td
                class="table__cell"
              >
                Table Row 3, Table Cell 3
              </td>
              <td
                class="table__cell"
              >
                Table Row 3, Table Cell 4
              </td>
              <td
                class="table__cell"
              >
                Table Row 3, Table Cell 5
              </td>
            </tr>
            <tr
              class="table__row"
            >
              <td
                class="table__cell"
              >
                Table Row 4, Table Cell 1
              </td>
              <td
                class="table__cell"
              >
                Table Row 4, Table Cell 2
              </td>
              <td
                class="table__cell"
              >
                Table Row 4, Table Cell 3
              </td>
              <td
                class="table__cell"
              >
                Table Row 4, Table Cell 4
              </td>
              <td
                class="table__cell"
              >
                Table Row 4, Table Cell 5
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-4"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="text-passage"
        >
          <div
            class="layout-linelength-container text-passage__inner"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="4"
      data-rbd-droppable-id="container-2"
    />
  </section>
</div>
`;

exports[`<DragDrop /> VariousSizedItems story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop"
    data-rbd-droppable-context-id="2"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="2"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-19"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #1
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-19"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #2
        </div>
        <div
          class="fpo"
        >
          This container
          <br />
          has a lot of content
          <br />
          and will be taller than
          <br />
          other containers
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-19"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
          style="font-size: 12px; padding: 0px; text-align: center;"
        >
          Small container
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-19"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="item-4"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="item-4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
          style="font-size: 12px; padding: 0px; text-align: center;"
        >
          Another small container
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-19"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="item-5"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="item-5"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #5
        </div>
        <div
          class="fpo"
        >
          Another
          <br />
          larger
          <br />
          container
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="2"
      data-rbd-droppable-id="container-2"
    />
  </section>
</div>
`;
